# cheiron

./: .gitignore  JOURNAL.md  LOOP.md  README.md  pyproject.toml
docs/: OPERATIONS.md
docs/datasheets/: addition-alkene.md  habs-adamantane.md
docs/design/: 00-goal-and-scope.md  01-loop-architecture.md  02-arbiter.md  03-milestones.md
experiments/m0_hydrogen_abstraction/: run.py  run_scan.py
experiments/m0_hydrogen_abstraction/results/: ledger.jsonl  scans.jsonl  summary.md
experiments/m1_radical_addition/: run_addition.py  summarize.py
experiments/m1_radical_addition/results/: ledger.jsonl  scans.jsonl  summary.md
history/prompts/: 0001-initial-prompt.md
scripts/: audit_integrity.py  autopilot.sh  check_reversibility.py  search.py  summarize.py
src/cheiron/: __init__.py  addition.py  approach.py  arbiter.py  builder.py  geometry.py  integrity.py  ledger.py  loop.py  predict.py  proposer.py  score.py  search.py  selectivity.py  spec.py  validate.py
src/cheiron/chemistry/: __init__.py  library.py  species.py
tests/: test_addition.py  test_approach.py  test_pipeline.py  test_search.py  test_validate.py
